<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.LoginActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/title_activity_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">
        <TextView
            android:text="Email hoặc số điện thoại"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5" android:textColor="#000000"
            android:textSize="16sp" android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF838385"
            android:hint="Email/ Số điện thoại"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp" />

        <TextView
            android:text="Mật khẩu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView7" android:shadowColor="#000000"
            android:textSize="16sp" android:layout_marginBottom="8dp" android:layout_marginTop="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Mật khẩu"
                android:maxLines="1"
                android:backgroundTint="#FF838385"
                android:layout_weight="1"
                android:minHeight="48dp" />

            <ImageView
                android:id="@+id/hide_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hide_password_icon"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/error_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="gone"
        android:textStyle="italic"
        android:text="Thông tin tài khoản chưa chính xác"
        android:layout_marginTop="8dp" android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="ĐĂNG NHẬP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/login_button"
        android:layout_marginStart="40dp" android:layout_marginEnd="40dp" android:layout_marginTop="20dp"
        android:enabled="false"
        android:textSize="18sp" android:padding="12dp"/>
    <TextView
        android:text="Quên mật khẩu?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/forgot_password" android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
        android:textSize="16sp" android:textStyle="italic" android:textColor="#000000"/>
    <TextView
        android:text="Hoặc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
        android:textSize="16sp" android:textColor="#23A8F3"/>
    <Button
        android:text="ĐĂNG KÝ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/register_button" android:backgroundTint="@color/softPink"
        android:layout_marginStart="40dp" android:layout_marginEnd="40dp" android:layout_marginTop="30dp"
        android:textSize="18sp" android:padding="12dp" android:textColor="#000000"/>
</LinearLayout>